--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -480,9 +480,9 @@ endif
 GO_BUILD_DEP := netbase,
 
 # try to build with itself, or with the last version
-ifneq (,$(filter $(distrelease), jessie stretch sid))
+ifneq (,$(filter $(distrelease), jessie))
   gnat_build_dep := gnat-4.9 [$(ada_no_archs)], g++-4.9
-else ifneq (,$(filter $(distrelease), wheezy precise trusty wily))
+else ifneq (,$(filter $(distrelease), stretch sid wheezy precise trusty wily))
   gnat_build_dep := gnat-5 [$(ada_no_archs)], g++-5
 else ifneq (,$(filter $(distrelease), squeeze lucid))
   gnat_build_dep :=
