Import patches-unapplied version 5.2.1-24 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 8d7e036911ed774841d632d94f01d9736a95ef7a

New changelog entries:
  * Update to SVN 20151121 (r230703, 5.2.1) from the gcc-5-branch.
  * Fix PR libstdc++/56158, taken from the trunk. Closes: #804521. LP: #1514309.
  * Don't try to build a gnat cross compiler when there is no gnat compiler
    for the build architecture.
  * Update gnat build dependencies for backports.
  * Parallelize building documentation and parallelize the packaging step.
  * Update the Linaro support to the 5-2015.11 snapshot.

--- a/debian/rules
+++ b/debian/rules
@@ -20,20 +20,18 @@ include debian/rules.defs
 include debian/rules.unpack
 include debian/rules.patch
 
+NJOBS :=
+USE_CPUS := 1
+ifneq (,$(filter parallel=%,$(subst $(COMMA), ,$(DEB_BUILD_OPTIONS))))
+  USE_CPUS := $(subst parallel=,,$(filter parallel=%,$(subst $(COMMA), ,$(DEB_BUILD_OPTIONS))))
+  NJOBS := -j $(USE_CPUS)
+endif
+
 control: $(control_dependencies)
 	-mkdir -p $(stampdir)
 	$(MAKE) -f debian/rules.conf $@
 
-configure: $(configure_dependencies)
-$(configure_stamp): control $(unpack_stamp) $(patch_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(configure_dummy_stamp): control
-	$(MAKE) -f debian/rules2 $@
-$(configure_jit_stamp): control
-	$(MAKE) -f debian/rules2 $@
-$(configure_hppa64_stamp): $(build_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(configure_neon_stamp): $(build_stamp)
+configure: control $(unpack_stamp) $(patch_stamp)
 	$(MAKE) -f debian/rules2 $@
 
 pre-build:
@@ -45,21 +43,12 @@ pre-build:
 #endif
 #endif
 
-build: pre-build $(build_dependencies)
-build-arch: build
-build-indep: build
-$(build_stamp): $(unpack_stamp) $(patch_stamp) $(configure_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(build_dummy_stamp): $(configure_dummy_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(build_jit_stamp): $(configure_jit_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(build_javadoc_stamp): $(build_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(build_hppa64_stamp): $(configure_hppa64_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(build_neon_stamp): $(configure_neon_stamp)
-	$(MAKE) -f debian/rules2 $@
+build: pre-build control
+	$(MAKE) $(NJOBS) -f debian/rules2 $@
+build-arch: pre-build control
+	$(MAKE) $(NJOBS) -f debian/rules2 $@
+build-indep: pre-build control
+	$(MAKE) $(NJOBS) -f debian/rules2 $@
 
 check: $(check_stamp)
 $(check_stamp): $(build_stamp)
@@ -79,24 +68,13 @@ clean:
 	rm -f $(series_file)*
 	dh_clean
 
-install: $(install_dependencies)
-$(install_stamp): $(build_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(install_snap_stamp): $(build_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(install_dummy_stamp): $(build_dummy_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(install_jit_stamp): $(build_jit_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(install_hppa64_stamp): $(build_hppa64_stamp)
-	$(MAKE) -f debian/rules2 $@
-$(install_neon_stamp): $(build_neon_stamp)
+install:
 	$(MAKE) -f debian/rules2 $@
 
 html-docs doxygen-docs update-doxygen-docs update-ada-files xxx:
 	$(MAKE) -f debian/rules2 $@
 
-binary-indep binary-arch binary: install
+binary-indep binary-arch binary:
 	$(MAKE) -f debian/rules2 $@
 
 source diff:
