--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -207,9 +207,10 @@ else
   BINUTILSBDV = 2.22
   ifneq (,$(filter $(distrelease),vivid))
     BINUTILSBDV = 2.25-3~
-  endif
-  ifneq (,$(filter $(distrelease),jessie sid))
+  else ifneq (,$(filter $(distrelease),jessie sid))
     BINUTILSBDV = 2.25-7~
+  else ifneq (,$(filter $(distrelease),xenial))
+    BINUTILSBDV = 2.25.51.20151028
   endif
 endif
 ifeq ($(DEB_CROSS),yes)
@@ -482,7 +483,7 @@ GO_BUILD_DEP := netbase,
 # try to build with itself, or with the last version
 ifneq (,$(filter $(distrelease), jessie))
   gnat_build_dep := gnat-4.9 [$(ada_no_archs)], g++-4.9
-else ifneq (,$(filter $(distrelease), stretch sid wheezy precise trusty wily))
+else ifneq (,$(filter $(distrelease), stretch sid wheezy precise trusty wily xenial))
   gnat_build_dep := gnat-5 [$(ada_no_archs)], g++-5
 else ifneq (,$(filter $(distrelease), squeeze lucid))
   gnat_build_dep :=
@@ -1387,3 +1388,5 @@ check-versions:
 	  echo "binutils (>= $(BINUTILSBDV)) required, found $$v"; \
 	  exit 1; \
 	fi
+
+.PRECIOUS: $(stampdir)/%-stamp
