Import patches-unapplied version 5.2.1-25 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 08a558520bbcec5c8c7a2109363cc92839d2ffed

New changelog entries:
  * Update to SVN 20151123 (r230734, 5.2.1) from the gcc-5-branch.
  * Fix libgcc4-dbg dependency on libgcc4. Closes: #805839.
  * Fix building epoch prefixed cross packages.

--- a/debian/control
+++ b/debian/control
@@ -77,7 +77,7 @@ Package: libgcc2-dbg
 Architecture: m68k
 Section: debug
 Priority: extra
-Depends: gcc-5-base (= ${gcc:Version}), libgcc2 (= ${gcc:Version}), ${misc:Depends}
+Depends: gcc-5-base (= ${gcc:Version}), libgcc2 (= ${gcc:EpochVersion}), ${misc:Depends}
 Multi-Arch: same
 Description: GCC support library (debug symbols)
  Debug symbols for the GCC support library.
@@ -116,7 +116,7 @@ Architecture: hppa
 Multi-Arch: same
 Section: debug
 Priority: extra
-Depends: gcc-5-base (= ${gcc:Version}), libgcc4 (= ${gcc:Version}), ${misc:Depends}
+Depends: gcc-5-base (= ${gcc:Version}), libgcc4 (= ${gcc:EpochVersion}), ${misc:Depends}
 Description: GCC support library (debug symbols)
  Debug symbols for the GCC support library.
 
