--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -1009,6 +1009,7 @@ control-file:
 	  -Dbiarchhf_archs="$(strip $(subst /, ,$(biarchhfarchs)))" \
 	  -Dbiarchsf_archs="$(strip $(subst /, ,$(biarchsfarchs)))" \
 	  -Dadd_built_using=$(add_built_using) \
+	  -DGCC_PORTS_BUILD=$(GCC_PORTS_BUILD) \
 	  -DPR66145BREAKS="$(if $(findstring build-native,$(build_type)),$(if $(filter new,$(libstdcxx_abi)),$$(tr '\n' ' ' < debian/libstdc++-breaks.$(derivative))))" \
 		debian/control.m4 > debian/control.tmp2
 	uniq debian/control.tmp2 | sed '/^Build/s/ *, */, /g;/^  /s/ *, */, /g' \
