--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -14,13 +14,11 @@ ifeq ($(DEB_TARGET_GNU_CPU), $(findstring $(DEB_TARGET_GNU_CPU),hppa m68k))
   ifeq ($(DEB_TARGET_ARCH),hppa)
     GCC_SONAME := 4
   endif
-  DEB_LIBGCC_SOVERSION := $(DEB_SOVERSION)
-  DEB_LIBGCC_VERSION := $(DEB_VERSION)
 else
   GCC_SONAME := 1
-  DEB_LIBGCC_SOVERSION := $(DEB_SOEVERSION)
-  DEB_LIBGCC_VERSION := $(DEB_EVERSION)
 endif
+DEB_LIBGCC_SOVERSION := $(DEB_SOEVERSION)
+DEB_LIBGCC_VERSION := $(DEB_EVERSION)
 
 _soname_map = gcc=$(GCC_SONAME) stdc++=$(CXX_SONAME) gomp=$(GOMP_SONAME) \
 	ssp=$(SSP_SONAME) gfortran=$(FORTRAN_SONAME) \
@@ -207,10 +205,10 @@ else
   BINUTILSBDV = 2.22
   ifneq (,$(filter $(distrelease),vivid))
     BINUTILSBDV = 2.25-3~
-  else ifneq (,$(filter $(distrelease),jessie sid))
+  else ifneq (,$(filter $(distrelease),jessie))
     BINUTILSBDV = 2.25-7~
-  else ifneq (,$(filter $(distrelease),xenial))
-    BINUTILSBDV = 2.25.51.20151028
+  else ifneq (,$(filter $(distrelease),sid stretch xenial))
+    BINUTILSBDV = 2.25.90
   endif
 endif
 ifeq ($(DEB_CROSS),yes)
@@ -712,6 +710,9 @@ ifeq ($(with_gcclbase),yes)
 endif
 ifneq ($(DEB_STAGE),rtlibs)
   addons += cdev c++dev source multilib
+  ifeq ($(build_type),build-native)
+    addons += testresults
+  endif
   ifneq (,$(filter fortran, $(languages)))
       addons += fdev
   endif
