Import patches-unapplied version 5.2.1-27 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 91b94f44ec0fea29f522050a18a067a22004951d

New changelog entries:
  * Update to SVN 20151129 (r231053, 5.2.1) from the gcc-5-branch.
  * Don't strip cc1plus when shipping with unstripped frontends.
  * Relax libgnatvsn5-dev-*-cross and libgnatprj5-dev-*-cross dependencies
    on gnat-5-*-linux-gnu.
  * Fix setting the explicit libc dependency for cross builds.
  * Don't build m4-nofpu multilibs on sh4, install the default multilib
    into the standard location.
  * Stop building gnat on mips64, see https://gcc.gnu.org/PR65337 (#806370).
  * Update the patch for PR go/67508 and re-enable Go on sparc and sparc64.
  * Fix gnat sparc/sparc64 architecture detection.
  * Update libgcc and libstdc++ symbols files.
  * Don't ship the gcov tools in the gcc-hppa64-linux-gnu package.
  * Run the autoconf generation in parallel.
  * Add --enable-default-pie option to GCC configure, taken from the trunk.
  * Enable gnat for m68k cross builds.
  * Link gnat tools, gnat libs and libgccjit with the defaults LDFLAGS.
  * Skip non-default multilib and libstdc++-v3 debug builds in bootstrap builds.
  * Ship an empty debian/rules.parameters in the gcc-5-source package.

--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends: debhelper (>= 5.0.62), dpkg-dev (>= 1.17.11),
   gperf (>= 3.0.1), bison (>= 1:2.3), flex, gettext, 
   gdb, 
   texinfo (>= 4.3), locales, sharutils, 
-  procps, zlib1g-dev, libantlr-java, python, libffi-dev, fastjar, libmagic-dev, libecj-java (>= 3.3.0-2), zip, libasound2-dev [ !hurd-any !kfreebsd-any], libxtst-dev, libxt-dev, libgtk2.0-dev (>= 2.4.4-2), libart-2.0-dev, libcairo2-dev, gnat-5 [!m32r !sh3 !sh3eb !sh4 !sh4eb !m68k !powerpcspe !sparc64 !x32], g++-5, netbase, 
+  procps, zlib1g-dev, libantlr-java, python, libffi-dev, fastjar, libmagic-dev, libecj-java (>= 3.3.0-2), zip, libasound2-dev [ !hurd-any !kfreebsd-any], libxtst-dev, libxt-dev, libgtk2.0-dev (>= 2.4.4-2), libart-2.0-dev, libcairo2-dev, gnat-5 [!m32r !sh3 !sh3eb !sh4eb !powerpcspe !mips64 !x32 !m68k !sh4 !sparc64], g++-5, netbase, 
   libisl-dev (>= 0.14), libmpc-dev (>= 1.0), libmpfr-dev (>= 3.0.0-9~), libgmp-dev (>= 2:5.0.1~), 
   dejagnu [!m68k], realpath (>= 1.9.12), chrpath, lsb-release, quilt
 Build-Depends-Indep: doxygen (>= 1.7.2), graphviz (>= 2.2), ghostscript, texlive-latex-base, xsltproc, libxml2-utils, docbook-xsl-ns, 
