--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -238,13 +238,11 @@ libc_dev_ver := $(libc_ver)
 ifeq ($(with_multiarch_lib),yes)
   ifeq ($(derivative),Debian)
     libc_dev_ver := 2.13-5
-    #ifeq (,$(filter arm, $(go_no_cpus)))
-    #  libc_dev_ver := 2.13-31
-    #endif
   else
     libc_dev_ver := 2.13-0ubuntu6
   endif
 endif
+# first set LIBC_DEP/LIBC_DEV_DEP for native builds only
 ifeq ($(DEB_TARGET_ARCH_OS),linux)
   ifneq (,$(findstring $(DEB_TARGET_ARCH),alpha ia64))
     LIBC_DEP = libc6.1
@@ -259,18 +257,10 @@ else
     LIBC_DEP = libc0.1
   endif
   ifeq ($(DEB_TARGET_ARCH),uclibc)
-       LIBC_DEP ?= libuclibc
-       LIBC_DEV_DEP ?= libuclibc-dev
+       LIBC_DEP = libuclibc
   endif
 endif
-LIBC_DEV_DEP = $(LIBC_DEP)-dev
-# for cross
-ifeq ($(DEB_CROSS),yes)
-  LIBC_DEP ?= $(LIBC_DEP)$(LS)$(AQ)
-  LIBC_DEV_DEP ?= $(LIBC_DEV_DEP)$(LS)$(AQ)
-else
-  LIBC_DBG_DEP = libc6.1-dbg [alpha ia64] | libc0.3-dbg [hurd-i386] | libc0.1-dbg [kfreebsd-i386 kfreebsd-amd64] | libc6-dbg,
-endif
+LIBC_DEV_DEP := $(LIBC_DEP)-dev
 
 # this is about Debian archs name, *NOT* GNU target triplet
 biarch_deb_map := \
@@ -329,8 +319,14 @@ ifneq (,$(findstring yes,$(biarch64) $(biarch32) $(biarchn32) $(biarchx32)$(biar
   endif
 endif
 
-# Add suffix and required version
+# now add the cross suffix and required version
+LIBC_DEP := $(LIBC_DEP)$(LS)$(AQ)
 LIBC_DEV_DEP := $(LIBC_DEV_DEP)$(LS)$(AQ) (>= $(libc_dev_ver))
+
+ifneq (,$(filter $(build_type), build-native cross-build-native))
+  LIBC_DBG_DEP = libc6.1-dbg [alpha ia64] | libc0.3-dbg [hurd-i386] | libc0.1-dbg [kfreebsd-i386 kfreebsd-amd64] | libc6-dbg,
+endif
+
 # TODO: make this automatic, there must be a better way to define LIBC_DEP.
 ifneq ($(DEB_CROSS),yes)
   LIBC_BUILD_DEP = libc6.1-dev (>= $(libc_dev_ver)) [alpha ia64] | libc0.3-dev (>= $(libc_dev_ver)) [hurd-i386] | libc0.1-dev (>= $(libc_dev_ver)) [kfreebsd-i386 kfreebsd-amd64] | libc6-dev (>= $(libc_dev_ver))
@@ -558,8 +554,9 @@ NEXT_GCC_VERSION := $(shell echo $(GCC_VERSION) | \
 		awk -F. '{OFS="."; if (NF==2) $$3=1; else $$NF += 1; print}')
 # first version with a new path component in gcc_lib_dir (i.e. GCC_VERSION
 # or TARGET_ALIAS changes), or last version available for all architectures
-DEB_GCC_SOFT_VERSION := 5.1.1-12
-DEB_GCJ_SOFT_VERSION := 5.1.1-12
+DEB_GCC_SOFT_VERSION := 5.2.1-23
+DEB_GCJ_SOFT_VERSION := 5.2.1-23
+DEB_GNAT_SOFT_VERSION := 5.2.1-23
 
 ifeq ($(with_d),yes)
   GDC_VERSION := $(BASE_VERSION)
@@ -1050,6 +1047,7 @@ substvars-file: control-file
 		echo 'gcj:SoftVersion=$(DEB_GCJ_SOFT_VERSION)'; \
 		echo 'gcj:BaseVersion=$(BASE_VERSION)'; \
 		echo 'gnat:Version=$(DEB_GNAT_VERSION)'; \
+		echo 'gnat:SoftVersion=$(DEB_GNAT_SOFT_VERSION)'; \
 		echo 'binutils:Version=$(BINUTILSV)'; \
 		echo 'dep:libgcc=$(LIBGCC_DEP)'; \
 		echo 'dep:libgccdev=$(LIBGCC_DEV_DEP)'; \
